Remove flash of white borders on maximize/fullscreen

With Aero the default WM_NCPAINT doesn't clear the nonclient area, so on
resize it looks ugly when it temporarily becomes visible. Chrome can
clear it itself on WM_NCPAINT.

BUG=599391

Review URL: https://codereview.chromium.org/1852613003

Cr-Commit-Position: refs/heads/master@{#385080}

Former-commit-id: aa39868d81e25078a2a16dd7a214c5c31e1fb3f7